# phosh-tour

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  meson.build  meson_options.txt
build-aux/flatpak/: mobi.phosh.PhoshTour.json  sm.puri.PhoshTour.json
data/: meson.build  mobi.phosh.PhoshTour-first-login.desktop.in.in  mobi.phosh.PhoshTour-first-login.service.in  mobi.phosh.PhoshTour.desktop.in.in  mobi.phosh.PhoshTour.gschema.xml  mobi.phosh.PhoshTour.metainfo.xml.in.in  sm.puri.PhoshTour.desktop.in.in  sm.puri.PhoshTour.gschema.xml  sm.puri.PhoshTour.metainfo.xml.in.in
data/icons/: meson.build
debian/: changelog  control  copyright  phosh-tour.install
debian/tests/: control
po/: LINGUAS  POTFILES.in  be.po  bg.po  ca.po  cs.po  de.po  el.po  en_GB.po  eo.po  fa.po  fi.po  fr.po  he.po  ht.po  ka.po  meson.build  nl.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  uz.po
src/: main.c  meson.build  phosh-tour-application.c  phosh-tour-window.c  phosh-tour-window.h  phosh-tour.gresource.xml  pt-application.c  pt-application.h  pt-hw-page.c  pt-hw-page.h  pt-page.c  pt-page.h  pt-util.c  pt-util.h  pt-window.c  pt-window.h
src/gtk/: help-overlay.ui
src/ui/: phosh-tour-window.ui  pt-page.ui  pt-window.ui
subprojects/: gmobile.wrap
