# Use non-breaking space to avoid word wrap in brand or vendor names

option('brand',
       type: 'string', value: 'Phone',
       description: 'The branding to use, e.g. Librem 5')

option('vendor',
       type: 'string', value: 'Phosh',
       description: 'The vendor to use, e.g. Phosh, Debian, …')
